# PrivaSee

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  arcium_help.sh  build_sbf.sh  build_solana.sh  build_solana_direct.sh  build_solana_modern.sh  build_solana_pinned.sh  build_solana_pinned_v2.sh  check_cargo.sh  check_deps.sh  deploy.sh  final_sync.sh  find_quinn_context.sh  find_quinn_dependants.sh  find_quinn_dependants_v2.sh  find_quinn_owner.sh  find_ring.sh  find_ring_dependants.sh  find_rustls_dependants.sh  find_sbf.sh  fix_and_build.sh  list_toolchains.sh  manual_build.sh  next.config.js  package-lock.json  package.json  patch_idl.py  pin_deps.sh  pin_deps_v2.sh  run_arcium_build.sh  run_arcium_build_final.sh  run_arcium_build_ixs.sh  tailwind.config.js  test_cargo_build.sh  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/components/: ContactInput.tsx  MatchCard.tsx  Navbar.tsx  PrivacyShield.tsx  WalletProvider.tsx
app/discover/: page.tsx
app/register/: page.tsx
app/utils/: arcium-integration.ts  arcium.ts  crypto.ts  solana.ts
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
patched-arcium-anchor/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
patched-arcium-anchor/src/: arg_builder.rs  arg_match_param.rs  lib.rs  traits.rs
patched-arcium-client/: .cargo_vcs_info.json  Cargo.toml
patched-arcium-client/idls/: arcium.json
patched-arcium-client/src/: idl.rs  instruction.rs  lib.rs  (+1 more)
programs/privasee/: Cargo.toml
programs/privasee/src/: lib.rs
tests/: privasee.ts
